--- a/tetris.html
+++ b/tetris.html
@@ -5,27 +5,29 @@
   <title>HTML5 테트리스</title>
   <style>
     body { background: #222; color: #fff; text-align: center; }
-    canvas { background: #111; display: block; margin: 30px auto; border: 2px solid #888; }
-    #score { font-size: 24px; margin-top: 10px; }
+    canvas { background: #111; display: block; margin: 20px auto; }
+    #score { font-size: 1.5em; margin-top: 10px; }
+    #gameover { color: #ff4444; font-size: 2em; margin-top: 20px; display: none; }
   </style>
 </head>
 <body>
   <h1>테트리스</h1>
   <canvas id="tetris" width="300" height="600"></canvas>
   <div id="score">점수: 0</div>
+  <div id="gameover">게임 오버!</div>
   <script>
-    const canvas = document.getElementById('tetris');
-    const ctx = canvas.getContext('2d');
+    // 설정
     const COLS = 10, ROWS = 20, BLOCK = 30;
+    // 더 화려한 색상 팔레트
     const COLORS = [
       null,
-      '#0ff', // I
-      '#00f', // J
-      '#fa0', // L
-      '#ff0', // O
-      '#0f0', // S
-      '#808', // T
-      '#f00'  // Z
+      'linear-gradient(135deg, #00fff0 0%, #00bfff 100%)', // I
+      'linear-gradient(135deg, #0040ff 0%, #00e0ff 100%)', // J
+      'linear-gradient(135deg, #ffb347 0%, #ffcc33 100%)', // L
+      'linear-gradient(135deg, #fff700 0%, #ffe259 100%)', // O
+      'linear-gradient(135deg, #00ff87 0%, #60efff 100%)', // S
+      'linear-gradient(135deg, #a770ef 0%, #f6d365 100%)', // T
+      'linear-gradient(135deg, #ff5858 0%, #f09819 100%)'  // Z
     ];
     const SHAPES = [
       [],
@@ -38,7 +40,12 @@
       [[7,7,0],[0,7,7]]  // Z
     ];
 
-    // 게임판 생성
+    // 캔버스
+    const canvas = document.getElementById('tetris');
+    const ctx = canvas.getContext('2d');
+    ctx.scale(BLOCK, BLOCK);
+
+    // 필드 생성
     function createMatrix(w, h) {
       const matrix = [];
       while (h--) matrix.push(new Array(w).fill(0));
@@ -51,12 +58,11 @@
     }
 
     // 충돌 체크
-    function collide(matrix, piece) {
-      const [m, o] = [piece.matrix, piece.pos];
-      for (let y = 0; y < m.length; ++y) {
-        for (let x = 0; x < m[y].length; ++x) {
-          if (m[y][x] &&
-              (matrix[y + o.y] && matrix[y + o.y][x + o.x]) !== 0) {
+    function collide(field, piece, pos) {
+      for (let y = 0; y < piece.length; ++y) {
+        for (let x = 0; x < piece[y].length; ++x) {
+          if (piece[y][x] &&
+              (field[y + pos.y] && field[y + pos.y][x + pos.x]) !== 0) {
             return true;
           }
         }
@@ -64,169 +70,190 @@
       return false;
     }
 
-    // 블록을 게임판에 합치기
-    function merge(matrix, piece) {
-      piece.matrix.forEach((row, y) => {
-        row.forEach((value, x) => {
-          if (value) matrix[y + piece.pos.y][x + piece.pos.x] = value;
+    // 필드에 블록 고정
+    function merge(field, piece, pos) {
+      piece.forEach((row, y) => {
+        row.forEach((val, x) => {
+          if (val) field[y + pos.y][x + pos.x] = val;
         });
       });
     }
 
-    // 한 줄 지우기
+    // 한 줄 삭제
     function sweep() {
-      let rowCount = 1;
-      outer: for (let y = matrix.length - 1; y >= 0; --y) {
+      let rowCount = 0;
+      outer: for (let y = field.length - 1; y >= 0; --y) {
         for (let x = 0; x < COLS; ++x) {
-          if (!matrix[y][x]) continue outer;
+          if (!field[y][x]) continue outer;
         }
-        const row = matrix.splice(y, 1)[0].fill(0);
-        matrix.unshift(row);
+        const row = field.splice(y, 1)[0].fill(0);
+        field.unshift(row);
+        ++rowCount;
         ++y;
-        score += rowCount * 100;
-        rowCount *= 2;
+      }
+      if (rowCount) {
+        score += rowCount * 10;
+        document.getElementById('score').textContent = '점수: ' + score;
       }
     }
 
     // 블록 회전
-    function rotate(matrix, dir) {
+    function rotate(matrix) {
       for (let y = 0; y < matrix.length; ++y) {
         for (let x = 0; x < y; ++x) {
           [matrix[x][y], matrix[y][x]] = [matrix[y][x], matrix[x][y]];
         }
       }
-      if (dir > 0) matrix.forEach(row => row.reverse());
-      else matrix.reverse();
+      matrix.forEach(row => row.reverse());
     }
 
-    // 블록별로 그라데이션 색상 배열
-    const BLOCK_GRADIENTS = [
-      null,
-      ['#00fff7', '#00bfff'], // I
-      ['#3a7bff', '#001aff'], // J
-      ['#ffb347', '#ff7f00'], // L
-      ['#fff700', '#ffe600'], // O
-      ['#00ff87', '#00c96b'], // S
-      ['#d900ff', '#7c00b6'], // T
-      ['#ff4b4b', '#ff0000']  // Z
-    ];
+    // 실제 색상값으로 변환 (캔버스에서는 그라디언트 객체 사용)
+    function getBlockFillStyle(val, x, y) {
+      if (!val) return null;
+      // 각 블록마다 고유 그라디언트
+      switch (val) {
+        case 1: { // I
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#00fff0");
+          grad.addColorStop(1, "#00bfff");
+          return grad;
+        }
+        case 2: { // J
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#0040ff");
+          grad.addColorStop(1, "#00e0ff");
+          return grad;
+        }
+        case 3: { // L
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#ffb347");
+          grad.addColorStop(1, "#ffcc33");
+          return grad;
+        }
+        case 4: { // O
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#fff700");
+          grad.addColorStop(1, "#ffe259");
+          return grad;
+        }
+        case 5: { // S
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#00ff87");
+          grad.addColorStop(1, "#60efff");
+          return grad;
+        }
+        case 6: { // T
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#a770ef");
+          grad.addColorStop(1, "#f6d365");
+          return grad;
+        }
+        case 7: { // Z
+          let grad = ctx.createLinearGradient(x, y, x+1, y+1);
+          grad.addColorStop(0, "#ff5858");
+          grad.addColorStop(1, "#f09819");
+          return grad;
+        }
+        default: return "#fff";
+      }
+    }
 
-    // 블록 드로우 (그라데이션 적용)
+    // 블록 그리기
     function drawMatrix(matrix, offset) {
       matrix.forEach((row, y) => {
-        row.forEach((value, x) => {
-          if (value) {
-            // 그라데이션 생성
-            const grad = ctx.createLinearGradient(
-              (x + offset.x) * BLOCK, (y + offset.y) * BLOCK,
-              (x + offset.x + 1) * BLOCK, (y + offset.y + 1) * BLOCK
-            );
-            grad.addColorStop(0, BLOCK_GRADIENTS[value][0]);
-            grad.addColorStop(1, BLOCK_GRADIENTS[value][1]);
-            ctx.fillStyle = grad;
-            ctx.fillRect((x + offset.x) * BLOCK, (y + offset.y) * BLOCK, BLOCK-1, BLOCK-1);
-
-            // 블록 테두리
+        row.forEach((val, x) => {
+          if (val) {
+            ctx.save();
+            ctx.fillStyle = getBlockFillStyle(val, x + offset.x, y + offset.y);
+            ctx.fillRect(x + offset.x, y + offset.y, 1, 1);
             ctx.strokeStyle = "#fff";
-            ctx.lineWidth = 2;
-            ctx.strokeRect((x + offset.x) * BLOCK, (y + offset.y) * BLOCK, BLOCK-1, BLOCK-1);
+            ctx.lineWidth = 0.07;
+            ctx.strokeRect(x + offset.x, y + offset.y, 1, 1);
+            ctx.restore();
           }
         });
       });
     }
 
-    // 전체 드로우
+    // 전체 그리기
     function draw() {
       ctx.fillStyle = '#111';
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      drawMatrix(matrix, {x:0, y:0});
-      drawMatrix(player.matrix, player.pos);
+      ctx.fillRect(0, 0, COLS, ROWS);
+      drawMatrix(field, {x:0, y:0});
+      drawMatrix(piece.matrix, piece.pos);
     }
 
     // 새 블록
-    function playerReset() {
-      const types = 'IJLOSTZ';
-      const idx = Math.floor(Math.random() * 7) + 1;
-      player.matrix = createPiece(idx);
-      player.pos.y = 0;
-      player.pos.x = Math.floor(COLS / 2) - Math.floor(player.matrix[0].length / 2);
-      if (collide(matrix, player)) {
-        matrix.forEach(row => row.fill(0));
-        score = 0;
-        updateScore();
-        alert('게임 오버!');
+    function newPiece() {
+      const type = Math.floor(Math.random() * (SHAPES.length - 1)) + 1;
+      piece.matrix = createPiece(type);
+      piece.pos = {x: Math.floor(COLS/2) - Math.floor(piece.matrix[0].length/2), y: 0};
+      if (collide(field, piece.matrix, piece.pos)) {
+        document.getElementById('gameover').style.display = 'block';
+        running = false;
       }
-    }
-
-    // 블록 이동
-    function playerDrop() {
-      player.pos.y++;
-      if (collide(matrix, player)) {
-        player.pos.y--;
-        merge(matrix, player);
-        playerReset();
-        sweep();
-        updateScore();
-      }
-      dropCounter = 0;
-    }
-
-    function playerMove(dir) {
-      player.pos.x += dir;
-      if (collide(matrix, player)) player.pos.x -= dir;
-    }
-
-    // 블록 회전 (위쪽 화살표는 회전 금지)
-    function playerRotate(dir) {
-      // dir이 1(위쪽 화살표)면 아무 동작도 하지 않음
-      if (dir === 1) return;
-      const pos = player.pos.x;
-      let offset = 1;
-      rotate(player.matrix, dir);
-      while (collide(matrix, player)) {
-        player.pos.x += offset;
-        offset = -(offset + (offset > 0 ? 1 : -1));
-        if (offset > player.matrix[0].length) {
-          rotate(player.matrix, -dir);
-          player.pos.x = pos;
-          return;
-        }
-      }
-    }
-
-    // 점수 업데이트
-    function updateScore() {
-      document.getElementById('score').innerText = '점수: ' + score;
     }
 
     // 게임 루프
-    let matrix = createMatrix(COLS, ROWS);
-    let player = { pos: {x:0, y:0}, matrix: null };
-    let dropCounter = 0, dropInterval = 500, lastTime = 0, score = 0;
+    let field, piece, dropCounter, dropInterval, lastTime, score, running;
+
+    function startGame() {
+      field = createMatrix(COLS, ROWS);
+      piece = {matrix: null, pos: {x:0, y:0}};
+      dropCounter = 0;
+      dropInterval = 500;
+      lastTime = 0;
+      score = 0;
+      running = true;
+      document.getElementById('score').textContent = '점수: 0';
+      document.getElementById('gameover').style.display = 'none';
+      newPiece();
+      update();
+    }
 
     function update(time = 0) {
+      if (!running) return;
       const delta = time - lastTime;
       lastTime = time;
       dropCounter += delta;
-      if (dropCounter > dropInterval) playerDrop();
+      if (dropCounter > dropInterval) {
+        piece.pos.y++;
+        if (collide(field, piece.matrix, piece.pos)) {
+          piece.pos.y--;
+          merge(field, piece.matrix, piece.pos);
+          sweep();
+          newPiece();
+        }
+        dropCounter = 0;
+      }
       draw();
       requestAnimationFrame(update);
     }
 
-    // 키 이벤트 (위쪽 화살표는 회전 금지)
+    // 키 입력
     document.addEventListener('keydown', e => {
-      if (e.key === 'ArrowLeft') playerMove(-1);
-      else if (e.key === 'ArrowRight') playerMove(1);
-      else if (e.key === 'ArrowDown') playerDrop();
-      // 위쪽 화살표는 아무 동작도 하지 않음
-      // else if (e.key === 'ArrowUp') playerRotate(1);
+      if (!running) return;
+      if (e.key === 'ArrowLeft') {
+        piece.pos.x--;
+        if (collide(field, piece.matrix, piece.pos)) piece.pos.x++;
+      } else if (e.key === 'ArrowRight') {
+        piece.pos.x++;
+        if (collide(field, piece.matrix, piece.pos)) piece.pos.x--;
+      } else if (e.key === 'ArrowDown') {
+        piece.pos.y++;
+        if (collide(field, piece.matrix, piece.pos)) piece.pos.y--;
+      } else if (e.key === 'ArrowUp') {
+        // 블록 회전 - 원래 모양 유지하면서 회전
+        const old = piece.matrix.map(row => row.slice());
+        rotate(piece.matrix);
+        if (collide(field, piece.matrix, piece.pos)) {
+          // 충돌하면 원래 모양으로 복원
+          piece.matrix = old;
+        }
+      }
     });
 
-    window.onload = function() {
-      playerReset();
-      updateScore();
-      update();
-    };
-  </script>
+    window.onload = startGame;
+    </script>
 </body>
 </html>
